add new fields to Verzoek endpoint
